MSA/12/Manifest/health-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-deployment
  labels:
    app: health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      labels:
        app: health
    spec:
      containers:
      - name: health
        image: likerpic/server_c:1.0
        ports:
        - containerPort: 8000
