MSA/12/Manifest/health-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-service
spec:
  selector:
    app: health
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
